cambio en componentes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>ESPE Search</title>
-    <script type="module" src="/src/espe-search-input.ts"></script>
-    <script type="module" src="src/espe-course-card.ts"></script>
+    <script type="module" src="src/components/espe-search-input.ts"></script>
+    <script type="module" src="src/components/espe-course-card.ts"></script>
     <style>
       body {
         height: 100vh;
