cambios en html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>ESPE Search</title>
+    <title>ESPE components</title>
     <script type="module" src="src/components/espe-search-input.ts"></script>
     <script type="module" src="src/components/espe-course-card.ts"></script>
     <style>
@@ -95,45 +95,40 @@
           <espe-course-card
             data-nombre="Investigación"
             title="Investigación"
-            description="📘 Métodos científicos aplicados"
+            description="📘 Métodos científicos aplicados"          
             progress="60"
-            progressColor="green"
             buttonTheme="yellow"
           ></espe-course-card>
 
           <espe-course-card
             data-nombre="Ingeniería"
             title="Ingeniería"
-            description="📗 Fundamentos de ingeniería general"
+            description="📗 Fundamentos de ingeniería general"   
             progress="70"
-            progressColor="green"
-            buttonTheme="yellow"
+            buttonTheme="yellow"            
           ></espe-course-card>
 
           <espe-course-card
             data-nombre="Administración"
             title="Administración"
-            description="📙 Gestión y liderazgo organizacional"
+            description="📙 Gestión y liderazgo organizacional"            
             progress="40"
-            progressColor="red"
             buttonTheme="green"
           ></espe-course-card>
 
           <espe-course-card
             data-nombre="Computación"
             title="Computación"
-            description="💻 Fundamentos y algoritmos"
+            description="💻 Fundamentos y algoritmos"           
             progress="50"
-            progressColor="green"
             buttonTheme="yellow"
           ></espe-course-card>
 
           <espe-course-card
             data-nombre="Biotecnología"
             title="Biotecnología"
-            description="🧬 Procesos biológicos avanzados"
+            description="🧬 Procesos biológicos avanzados"           
             progress="30"
-            progressColor="red"
             buttonTheme="green"
           ></espe-course-card>
         </section>
