--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
         font-family: sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #414141;
         display: flex;
         justify-content: center;
+        transition: background-color 0.3s ease;
       }
 
       .container {
         max-width: 1100px;
         width: 90%;
-        border: solid 3px black;
         padding: 40px 20px;
         border-radius: 20px;
-        box-shadow: 10px 5px 10px 5px rgb(69, 69, 69);
-        background-color: rgb(48, 48, 48);
         margin: 2rem auto;
+        border: solid 3px;
+        box-shadow: 10px 5px 10px 5px;
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
       }
 
       h1 {
         text-align: center;
         font-size: 1.8rem;
         margin-bottom: 1.5rem;
-        color: aliceblue;
       }
 
       .search-bar {
@@ -60,10 +59,10 @@
         width: 100%;
       }
 
+      /* 📱 Estilos responsive */
       @media (max-width: 768px) {
         .container {
           padding: 20px 10px;
-          
           place-content: center;
           place-items: center;
         }
@@ -76,7 +75,43 @@
           width: 50%;
         }
       }
-    </style>
+
+      /* 🌞 MODO CLARO */
+      @media (prefers-color-scheme: light) {
+        body {
+          background-color: #f5f5f5;
+          color: #111;
+        }
+
+        .container {
+          background-color: #ffffff;
+          border-color: #000;
+          box-shadow: 10px 5px 10px 5px #ccc;
+        }
+
+        h1 {
+          color: #111;
+        }
+      }
+
+      /* 🌙 MODO OSCURO */
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #414141;
+          color: #f5f5f5;
+        }
+
+        .container {
+          background-color: #303030;
+          border-color: #000;
+          box-shadow: 10px 5px 10px 5px rgb(69, 69, 69);
+        }
+
+        h1 {
+          color: aliceblue;
+        }
+      }
+    </style>
   </head>
 
   <body>
